--- a/acrofestival/templates/pages/winteracro/snippets/footer.html
+++ b/acrofestival/templates/pages/winteracro/snippets/footer.html
@@ -11,7 +11,7 @@
               <h2>General contact information</h2>
               <dl class="alt">
                 <dt>Whatsapp</dt>
-                                <dd><a href='https://chat.whatsapp.com/F4YKDpKs1LL40KnFAtVXav'>Winter Fest Group</a></dd>
+                <dd>{% tinycontent_simple 'winter_general_whatsapp' %}</dd>
                 <dt>Email</dt>
                 <dd><a href="mailto:acrolama@acrolama.com">acrolama@acrolama.com</a></dd>
               </dl>
