--- a/acrofestival/templates/pages/winteracro/location.html
+++ b/acrofestival/templates/pages/winteracro/location.html
@@ -13,13 +13,13 @@
                         <!-- Content -->
                             <section id="accommodation" class="main">
                                     <span class="image main">
-                                            <img src="{% static "fest/images/pic04.jpg"%}" alt="" />
+                                            <img src="{% static "winteracro/images/pic04.jpg"%}" alt="lenk accomodation for the winter acro festival" />
                                     </span>
                                     <h1>Accommodation</h1>
                                     <h2>Mountain lodge camp</h2>
                                     <p>
                                     <span class="image right">
-                                            <img src="{% static "fest/images/pic05.jpg" %}" alt="" />
+                                            <img src="{% static "winteracro/images/pic05.jpg" %}" alt="winter acromodation for the acrolama winter acro festival" />
                                     </span>
                                     Our camp is centrally located at Lenk village and just 2 minutes’ walk from the
                                     train station and 5 minuets walk away from the hall. So no LamaAirlines needed this
