--- a/acrofestival/templates/pages/winteracro/prices.html
+++ b/acrofestival/templates/pages/winteracro/prices.html
@@ -12,7 +12,7 @@
             <div id="main">
                 <!-- Content -->
                     <section id="content" class="main">
-                        <span class="image main"><img src="{% static "fest/images/pic07.jpg"%}" alt="" /></span>
+                        <span class="image main"><img src="{% static "winteracro/images/pic07.jpg"%}" alt="" /></span>
                         <h2>Festival passes</h2>
                         <p>{% tinycontent_simple 'winter_prices_description' %}  We have passes based on the amout of days you stay at the festival. All of them
                         include: accommodation, food, workshops and special events.</br>
