--- a/acrofestival/templates/pages/winteracro/prices.html
+++ b/acrofestival/templates/pages/winteracro/prices.html
@@ -7,7 +7,7 @@
                 <h1>Prices & Conditions</h1>
                 <p></p>
             </header>
-            {% include 'snippets/navnothome.html' %}
+            {% include 'winteracro/snippets/navnothome.html' %}
         <!-- Main -->
             <div id="main">
                 <!-- Content -->
