--- a/acrofestival/templates/pages/winteracro/prices.html
+++ b/acrofestival/templates/pages/winteracro/prices.html
@@ -3,39 +3,35 @@
 <!-- Wrapper -->
     <div id="wrapper">
         <!-- Header -->
-            <header id="header">
-                <h1>Prices & Conditions</h1>
-                <p></p>
-            </header>
+        <header id="header">
+            <h1>Prices & Conditions</h1>
+            <p></p>
+        </header>
             {% include 'winteracro/snippets/navnothome.html' %}
         <!-- Main -->
-            <div id="main">
-                <!-- Content -->
-                    <section id="content" class="main">
-                        <span class="image main"><img src="{% static "winteracro/images/pic07.jpg"%}" alt="" /></span>
-                        <h2>Festival passes</h2>
-                        <p>{% tinycontent_simple 'winter_prices_description' %}  We have passes based on the amout of days you stay at the festival. All of them
-                        include: accommodation, food, workshops and special events.</br>
-                        Single Day Ticket <u>don't include breakfast or accommodations</u>.
-                        <h3>Price list</h3>
-                        <ul>
-                            <li>6 Days Pass: CHF 460.- | EUR 420.-{% tinycontent_simple 'winter_prices_full' %}</li>
-                            <li>Single Day Ticket: CHF 85.- | EUR 75.-{% tinycontent_simple 'winter_prices_full_nosleep' %}</li>
-                            <li>Weekend Pass(FR-SU): CHF 220.- | EUR 200.-{% tinycontent_simple 'winter_prices_single' %}</li>
-                            <li>Single Day Ticket: CHF 85.- | EUR 75.-{% tinycontent_simple 'winter_prices_upgrade1' %}</li>
-                            <li>Single Day Ticket: CHF 85.- | EUR 75.-{% tinycontent_simple 'winter_prices_upgrade2' %}</li>
-                        </ul>
-                        <h3>Payment methods</h3>
-                        <p> We will send you the bank details after you send us your registration
-                        <a href="{% url "winterform" %}">FORM</a> by email.</br>
-                        If another payment method is needed for any special reason please ask us directly.</br>
-                        *Note that there might be a fee included.</p>
-                        <h2>Refund conditions</h2>
-                        <p>{% tinycontent_simple 'winter_prices_refunds' %}Before 15. of January: 50% refund. After: no refund, <u>but</u> you can happily sell or
-                        give your ticket to someone else. Let us know about the name change per your registration
-                        email!</p>
-                    </section>
-            </div>
-            {% include 'snippets/footer.html' %}
+        <div id="main">
+            <!-- Content -->
+            <section id="content" class="main">
+                <span class="image main"><img src="{% static "winteracro/images/pic07.jpg"%}" alt="" /></span>
+                <h2>Festival passes</h2>
+                <p>{% tinycontent_simple 'winter_prices_description' %}
+                <h3>Price list</h3>
+                <ul>
+                    <li>{% tinycontent_simple 'winter_prices_full' %}</li>
+                    <li>{% tinycontent_simple 'winter_prices_full_nosleep' %}</li>
+                    <li>{% tinycontent_simple 'winter_prices_single' %}</li>
+                    <li>{% tinycontent_simple 'winter_prices_upgrade1' %}</li>
+                    <li>{% tinycontent_simple 'winter_prices_upgrade2' %}</li>
+                </ul>
+                <h3>Payment methods</h3>
+                <p> We will send you the bank details after you send us your registration
+                <a href="{% url "winterform" %}">FORM</a> by email.</br>
+                If another payment method is needed for any special reason please ask us directly.</br>
+                *Note that there might be a fee included.</p>
+                <h2>Refund conditions</h2>
+                <p>{% tinycontent_simple 'winter_prices_refunds' %}</p>
+            </section>
+    </div>
+    {% include 'snippets/footer.html' %}
     </div>
 {% endblock %}
