Form, Inex, Home Models

--- a/acrofestival/templates/pages/winteracro/snippets/footer.html
+++ b/acrofestival/templates/pages/winteracro/snippets/footer.html
@@ -1,4 +1,4 @@
-<!-- Footer -->
+<!-- Footer -->{% load tinycontent_tags %}
           <footer id="footer">
             <section>
               <h2>Acrolama</h2>
