--- a/acrofestival/templates/pages/formulario/homeform.html
+++ b/acrofestival/templates/pages/formulario/homeform.html
@@ -1,51 +1,100 @@
-{% extends "pages/formulario/baseform.html" %}
+{% extends "pages/formulario/baseform.html" %}{% load tinycontent_tags %}
 {% block content %}
-    <div class="container">
-            <div class="fs-form-wrap" id="fs-form-wrap">
-                <div class="fs-title">
-                    <h1>Winter Acro Festival</h1>
-                    <div class="codrops-top">
-                        <a class="codrops-icon fa-facebook-square" href="https://www.facebook.com/events/323469541473677/"><span>Facebook Event</span></a>
-                        <a class="codrops-icon fa-envelope" href="mailto:acrolama@acrolama.com"><span>Send us an Email</span></a>
-                        <a class="codrops-icon fa-question-circle-o" href="{% url "winteracro"%}#first"><span>Frequently Asked Questions</span></a>
-                    </div>
-                </div>
-                <form id="myform" class="fs-form fs-form-full" autocomplete="off" method="POST">{% csrf_token %}
-                    <ol class="fs-fields">
-                        <li>
-                            <label class="fs-field-label fs-anim-upper" for="name">What's your full name?</label>
-                            <input class="fs-anim-lower" id="name" name="name" type="text" placeholder="Dean Moriarty" required/>
-                        </li>
-                       <li>
-                            <label class="fs-field-label fs-anim-upper" for="address">What's your address?</label>
-                            <input class="fs-anim-lower" id="address" name="address" type="text" placeholder="221B Baker Street England" required/>
-                        </li>
-                       <li>
-                            <label class="fs-field-label fs-anim-upper" for="numero" data-info="For emergencys only">What's your phone number?</label>
-                            <input class="fs-anim-lower" id="numero" name="numero" type="text" placeholder="+4112345678" required/>
-                        </li>
-                        <li>
-                            <label class="fs-field-label fs-anim-upper" for="email" data-info="We won't send you spam, we promise...">What's your email?</label>
-                            <input class="fs-anim-lower" id="email" name="email" type="email" placeholder="acrolama@acrolama.com" required/>
-                        </li>
-                        <li data-input-trigger>
-                            <label class="fs-field-label fs-anim-upper" for="option" data-info="All the scheduele is in the event. Please comment which day your comming if you come a single day.">How many days will you stay? <i class="fa fa-heart" aria-hidden="true"></i></label>
-                            <div class="fs-radio-group fs-radio-custom clearfix fs-anim-lower">
-                                <span><input id="q54" name="option" type="radio" value="FL"/><label for="q54" class="radio-4day">6 Days Pass CHF 460.- | EUR 420.-</label></span>
-                                <span><input id="q53" name="option" type="radio" value="WE"/><label for="q53" class="radio-3day">Weekend Pass (Fr - Su) CHF 220.- | EUR 200.-</label></span>
-                                <span><input id="q51" name="option" type="radio" value="ST"/><label for="q51" class="radio-1day">Single Day Ticket CHF 85.-| EUR 75.- (Please comment which day)</label></span>
-                            </div>
-                        </li>
-                        <li>
-                            <label class="fs-field-label fs-anim-upper" for="allergies" data-info="All food is Bio & Vegan">Any allergies? or some other healt related condition?. If comming for a single day please comment which day.</label>
-                            <textarea class="fs-anim-lower" id="allergies" name="allergies" placeholder="Describe here"></textarea>
-                        </li>
-                    </ol><!-- /fs-fields -->
-                    <button class="fs-submit" type="submit">Send answers</button>
-                </form><!-- /fs-form -->
-            </div><!-- /fs-form-wrap -->
-            <div class="related">
-                <p>Designed by Adrian Garate and Giulia Martinelli - Icons Created by Javier Ñuño from the Noun Project</p>
+<div class="container">
+    <div class="fs-form-wrap" id="fs-form-wrap">
+        <div class="fs-title">
+            <h1>Winter Acro Festival</h1>
+            <div class="codrops-top">
+                <a class="codrops-icon fa-facebook-square" href="{% tinycontent_simple 'winter_general_fb' %}"><span>Facebook Event</span></a>
+                <a class="codrops-icon fa-envelope" href="mailto:acrolama@acrolama.com"><span>Send us an Email</span></a>
+                <a class="codrops-icon fa-question-circle-o" href="{% url "winteracro"%}#first"><span>Frequently Asked Questions</span></a>
             </div>
-        </div><!-- /container -->
+        </div>
+        <form id="myform" class="fs-form fs-form-full" autocomplete="off" method="POST">{% csrf_token %}
+            <ol class="fs-fields">
+                <li>
+                    <label class="fs-field-label fs-anim-upper" for="name">
+                    What's your full name?
+                    </label>
+                    <input class="fs-anim-lower" id="name" name="name" type="text" placeholder="Napoleon Dynamite" required/>
+                </li>
+                <li>
+                    <label class="fs-field-label fs-anim-upper" for="address">
+                        What's your address?
+                    </label>
+                    <input class="fs-anim-lower" id="address" name="address" type="text" placeholder="Vote for Pedro 42 Schweiz" required/>
+                </li>
+                <li>
+                    <label class="fs-field-label fs-anim-upper" for="phone" data-info="For emergencys only">
+                        What's your phone number?
+                    </label>
+                    <input class="fs-anim-lower" id="phone" name="phone" type="text" placeholder="+314159265359" required/>
+                </li>
+                <li>
+                    <label class="fs-field-label fs-anim-upper" for="email" data-info="Be part of our spam protocol. ... .Kidding.">
+                        What's your email?
+                    </label>
+                    <input class="fs-anim-lower" id="email" name="email" type="email" placeholder="acrolama@acrolama.com" required/>
+                </li>
+                <li data-input-trigger>
+                    <label class="fs-field-label fs-anim-upper" for="option" data-info="All the scheduele is in the event. Please comment which day your comming if you come a single day.">
+                        How many days will you stay? <i class="fa fa-heart" aria-hidden="true"></i>
+                    </label>
+                    <div class="fs-radio-group fs-radio-custom clearfix fs-anim-lower">
+                        <span>
+                            <label for="q54" class="radio-3day">
+                                {% tinycontent_simple 'winter_prices_full' %}
+                            </label>
+                            <input id="q54" name="option" type="radio" value="Full"/>
+                        </span>
+                        <span>
+                            <label for="q54" class="radio-3day">
+                                {% tinycontent_simple 'winter_prices_full_nosleep' %}
+                            </label>
+                            <input id="q54" name="option" type="radio" value="Full - No Sleep"/>
+                        </span>
+                        <span>
+                            <label for="q54" class="radio-1day">
+                                {% tinycontent_simple 'winter_prices_single' %}
+                            </label>
+                            <input id="q54" name="option" type="radio" data-info="Please add in comment which day(s). Thanks!" value="Single"/>
+                        </span>
+                        <span>
+                            <label for="q54" class="radio-4day">
+                                {% tinycontent_simple 'winter_prices_upgrade1' %}
+                            </label>
+                            <input id="q54" name="option" type="radio" value="Upgrade 1"/>
+                        </span>
+                        <span>
+                            <label for="q54" class="radio-4day">
+                                {% tinycontent_simple 'winter_prices_upgrade2' %}
+                            </label>
+                            <input id="q54" name="option" type="radio" value="Upgrade 2"/>
+                        </span>
+                    </div>
+                </li>
+                <li>
+                    <label class="fs-field-label fs-anim-upper" for="allergies" data-info="All food is Organic & Vegan">
+                        Any allergies? or some other healt related condition?<br>
+                        Keep in mind all food is Vegan and Organic<br>
+                        (If comming for a single day please comment which days here.)
+                    </label>
+                    <textarea class="fs-anim-lower" id="allergies" name="allergies" placeholder="Describe here">
+                    </textarea>
+                </li>
+                <li>
+                    <label class="fs-field-label fs-anim-upper" for="donation">
+                        We're supporting the <a href="https://www.trilliontreecampaign.org/">Trillion Tree Campaign</a> through the Swiss NGO<a href="https://www.bos-schweiz.ch"> BOS Schweiz</a>. They do an awesome job at solving deforestation problems in a sustainable way.<a href="{% url 'home' %}"> READ MORE</a><br><br>
+                        We would appreciate your support, every bit counts:
+                    </label>
+                    <input class="fs-mark fs-anim-lower" id="donation" name="donation" type="number" placeholder="10" step="5" min="0"/>
+                </li>
+            </ol>
+            <button class="fs-submit" type="submit">Send answers</button>
+        </form><!-- /fs-form -->
+    </div><!-- /fs-form-wrap -->
+    <div class="related">
+        <p>Designed by Adrian Garate and Giulia Martinelli - Icons Created by Javier Ñuño from the Noun Project</p>
+    </div>
+</div><!-- /container -->
 {% endblock content%}
