--- a/acrofestival/templates/pages/winteracro/location.html
+++ b/acrofestival/templates/pages/winteracro/location.html
@@ -22,34 +22,19 @@
                     <img src="{% static "winteracro/images/pic05.jpg" %}" alt="winter acromodation for the acrolama winter acro festival" />
             </span>
             {% tinycontent_simple 'winter_accomodation_description' %}
-            Our camp is centrally located at Lenk village and just 2 minutes’ walk from the
-            train station and 5 minuets walk away from the hall. So no LamaAirlines needed this
-            year.</br>
             <h3>Dorms</h3>
             {% tinycontent_simple 'winter_accomodation_dorms' %}
-            We have 4 dormitories with each between 16 - 20 sleeping spots.</br>
-            There are mattress and pillows but please bring your own sleeping bag.</br></br>
             <h3>Upgrade</h3>
             {% tinycontent_simple 'winter_accomodation_upgrade' %}
             <h3>Address</h3>
             {% tinycontent_simple 'winter_accomodation_address' %}
-            Mountain lodge backpacker camp</br>
-            Gutenbrunnenstrasse</br>
-            3775 Lenk</br></br>
-            {% tinycontent_simple 'winter_accomodation_address_url' %}
-            <a class="button" style="box-shadow:0px; background:#f3d216;"
-                    href='https://goo.gl/maps/aTmnGQ3eY2P2'>
+            <a class="button" style="box-shadow:0px; background:#f3d216;" href="{% tinycontent_simple 'winter_accomodation_address_url' %}">
                     Google Maps CLICK HERE
             </a>
             </br></br>
             </p>
             <h3>Some other extra infos:</h3>
             {% tinycontent_simple 'winter_accomodation_extra' %}
-            <p>We'll place the sauna near to the camp.</br>
-            There are parking places for cars and mini buses.</br>
-            We recommend you to come by train.</br>
-            Bring some house shoes for the hall and house.</br>
-            All the meals are in the hall. Some snacks and coffee will be provided.</br>
         </section>
         <section id="location" class="main">
             <h1>Transportation</h1>
