--- a/acrofestival/templates/pages/winteracro/snippets/navhome.html
+++ b/acrofestival/templates/pages/winteracro/snippets/navhome.html
@@ -1,9 +1,10 @@
           <nav id="nav">
             <ul>
-              <li><a href="{% url 'winteracro' %}">Home</a></li>
-              <li><a href="{% url 'winteracro' %}#intro" class="active">Introduction</a></li>
-              <li><a href="{% url 'winteracro' %}#info">Information</a></li>
-              <li><a href="{% url 'winteracro' %}#schedule">Schedule</a></li>
+              <li><a href="{% url 'winteracro' %}#intro" class="">Included</a></li>
+              <li><a href="{% url 'winteracro' %}#info" class="">General Info</a></li>
+              <li><a href="{% url 'winterprices' %}">Pricing</a></li>
+              <li><a href="{% url 'winteracro' %}#teachers">Teachers</a></li>
+              <li><a href="{% url 'winteracro' %}#pics">Pictures</a></li>
               <li><a style="background:#f3d216;" href="{% url 'winterform'%}">Register</a></li>
             </ul>
           </nav>
