--- a/acrofestival/templates/pages/winteracro/snippets/navnothome.html
+++ b/acrofestival/templates/pages/winteracro/snippets/navnothome.html
@@ -1,8 +1,11 @@
           <nav id="nav">
             <ul>
-              <li><a href="{% url 'winteracro' %}#intro" class="active">Introduction</a></li>
-              <li><a href="#info">Information</a></li>
-              <li><a href="#schedule">Schedule</a></li>
-              <li><a style="background: #f3d216;" href="{% url 'winterform'%}">Register</a></li>
+              <li><a href="{% url 'winteracro' %}" class="">Home</a></li>
+              <li><a href="{% url 'winteracro' %}#intro" class="">Included</a></li>
+              <li><a href="{% url 'winteracro' %}#info" class="">General Info</a></li>
+              <li><a href="{% url 'winterprices' %}">Pricing</a></li>
+              <li><a href="{% url 'winteracro' %}#teachers">Teachers</a></li>
+              <li><a href="{% url 'winteracro' %}#pics">Pictures</a></li>
+              <li><a style="background:#f3d216;" href="{% url 'winterform'%}">Register</a></li>
             </ul>
           </nav>
