Donation and others

--- a/acrofestival/templates/pages/formulario/homeform.html
+++ b/acrofestival/templates/pages/formulario/homeform.html
@@ -84,7 +84,7 @@
                 </li>
                 <li>
                     <label class="fs-field-label fs-anim-upper" for="donation">
-                        We're supporting the <a href="https://www.trilliontreecampaign.org/">Trillion Tree Campaign</a> through the Swiss NGO<a href="https://www.bos-schweiz.ch"> BOS Schweiz</a>. They do an awesome job at solving deforestation problems in a sustainable way.<a href="{% url 'home' %}"> READ MORE</a><br><br>
+                        We're supporting the <a href="https://www.trilliontreecampaign.org/">Trillion Tree Campaign</a> through the Swiss NGO<a href="https://www.bos-schweiz.ch"> BOS Schweiz</a>. They do an awesome job at solving deforestation problems in a sustainable way.<a href="{% url 'winteacro' %}#donation"> READ MORE</a><br><br>
                         We would appreciate your support, every bit counts:
                     </label>
                     <input class="fs-mark fs-anim-lower" id="donation" name="donation" type="number" placeholder="10" step="5" min="0"/>
