--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -158,7 +158,7 @@
                         <h2>{% tinycontent_simple 'winter_general_title' %} - Teachers</h2>
                     </header>
                     <p>
-                    Keep in mind this is the list of <u>confirmed</u> teachers. We'll be adding more and more while they keep confirming!
+                    <u>Confirmed</u> teachers on the left. <u>To be confirmed</u> on the right. We'll keep you posted :)
                     </p>
                     <div class="box alt">
                         <div class="row gtr-uniform">
@@ -199,29 +199,43 @@
                             </span>
                             I had to laugh only from remembering Bruno! <u>Improvisation and staging</u> are he's strengths and passion. But it's hard to find the words to describe such a clown, you just have to meet him. Happy to have you with us my friend!
                             </p>
-                            <!-- <p><h2>Trudi & Wybren</h2></p> -->
-                            <!-- <p> -->
-                            <!-- <span class="image right"> -->
-                            <!--         <img src="{% static "winteracro/images/teachers2019/wybremandtrudi.jpg"%}" alt="Wybrem and Trudi -->
-                            <!--         in the Winter Acro Fest 2019 - Skining Codarts and more"> -->
-                            <!-- </span> -->
-                            <!-- It's endless what you could learn from this couple of amazing acrobats!<br> -->
-                            <!-- Wybren is teacher at the Codarts Circus School in Rotterdam and with Trudi they have -->
-                            <!-- given many of our favourite workshops. Very happy to have them on board! -->
-                            <!-- </p> -->
-                            <!-- <p><h2>Peter</h2></p>-->
-                            <!-- <p>-->
-                            <!-- <span class="image left">-->
-                            <!--         <img src="{% static "winteracro/images/teachers2019/peter.jpg"%}" alt="Peter and Julie-->
-                            <!--         in the Winter Acro Fest 2019 for the Second time teaching-->
-                            <!--         Acrobatics Icarians and more">-->
-                            <!-- </span>-->
-                            <!-- We where on our way to give a workshop in Copenhagen and while stalking the local-->
-                            <!-- teachers we came across some pretty nice flows. Later that day we finally met-->
-                            <!-- the authors: Peter and Julie. So lovely and beautiful people!! and what a multi poli-->
-                            <!-- hiper mover Peter is. Very happy he accepted our invitation!-->
-                            <!-- </p>-->
-                            <!-- <p><h2>Fer & Fifi</h2></p>-->
+                            <p><h2>Trudi & Wybren</h2></p>
+                            <p>
+                            <span class="image right">
+                                    <img src="{% static "winteracro/images/teachers2019/wybremandtrudi.jpg"%}" alt="Wybrem and Trudi
+                                    in the Winter Acro Fest 2019 - Skining Codarts and more">
+                            </span>
+                            It's endless what you could learn from this couple of amazing acrobats!<br>
+                            Wybren is teacher at the Codarts Circus School in Rotterdam and with Trudi they have
+                            given many of our favourite workshops. Very happy to have them on board!
+                            </p>
+                            <p><h2>Peter</h2></p>
+                            <p>
+                            <span class="image right">
+                                    <img src="{% static "winteracro/images/teachers2019/peter.jpg"%}" alt="Peter and Julie
+                                    in the Winter Acro Fest 2019 for the Second time teaching
+                                    Acrobatics Icarians and more">
+                            </span>
+                            We where on our way to give a workshop in Copenhagen and while stalking the local
+                            teachers we came across some pretty nice flows. Later that day we finally met
+                            the authors: Peter and Julie. So lovely and beautiful people!! and what a multi poli
+                            hiper mover Peter is. Very happy he accepted our invitation!
+                            </p>
+                            <p><h2>Duo Kaleidos</h2></p>
+                            <p>
+                            <span class="image right">
+                                    <img src="{% static "winteracro/images/teachers2019/kaleidos.jpg"%}" alt="duo kaleidos at the 3th version of the winter acro 2020 in lenk">
+                            </span>
+                            Many conventions have been shared but finally we hope to have them at the Winter Acro 2020. Amazing show this two have! And we love their workshops too: Technical, clean, elegant!!
+                            </p>
+                            <p><h2>Analogue Acrobatics</h2></p>
+                            <p>
+                            <span class="image right">
+                                <img src="{% static "winteracro/images/teachers2019/benandelli.jpg"%}" alt="duo kaleidos at the 3th version of the winter acro 2020 in lenk">
+                            </span>
+                            We just love this two! Last year they couldn't make it cause they where on tour with Cirkör, hope we have the pleasure this year.
+                            </p>
+                            <!-- <p><h2>Fer & Fifi</h2></p> -->
                             <!-- <p>-->
                             <!-- <span class="image right">-->
                             <!--         <img src="{% static "winteracro/images/teachers2019/feryfifi.jpg"%}" alt="Fer and Fifi-->
@@ -236,33 +250,6 @@
                             <!-- <p><h2>Paul</h2></p>-->
                             <!-- <p>-->
                             <!-- <span class="image left">-->
-                            <!-- <p><h2>Daniel Marty</h2></p>-->
-                            <!-- <p>-->
-                            <!-- <span class="image right">-->
-                            <!--         <img src="{% static "winteracro/images/teachers2019/daniel.jpg"%}" alt="Daniel Marty-->
-                            <!--         in the Winter Acro Fest 2019 for the Second time teaching-->
-                            <!--         Acrobatics Icarians and more">-->
-                            <!-- </span>-->
-                            <!-- For being "just his hobby" Daniel has investes A LOT of time in acro, and-->
-                            <!-- another bunch in developing the Basel and Swiss acro community. Mostly traveling-->
-                            <!-- arround from one big event to another, he hardly misses the local events. Very-->
-                            <!-- happy to have him sharing all that collected knowleadge at the Winter Acro Festival-->
-                            <!-- this 2019!-->
-                            <!-- </p>-->
-                            <!-- <p><h2>Kerstin and Uwe - Cameo Acrobatix</h2></p>-->
-                            <!-- <p>-->
-                            <!-- <span class="image left">-->
-                            <!--         <img src="{% static "winteracro/images/teachers2019/cameoacrobatix.jpg"%}" alt="Cameo Acrobatix-->
-                            <!--         in the Winter Acro Fest 2019 for the Second time teaching-->
-                            <!--         Acrobatics Icarians and more">-->
-                            <!-- </span>-->
-                            <!-- It's been very nice to see how this friends have grown so fast and good in their Acro paths. Touring-->
-                            <!-- with their acro company all arround europe, giving very nice workshops. Very happy to have them on Board!-->
-                            <!-- We picked them up in Berlin and Graz to bring them direct to Lenk yuhuiii!-->
-                            <!-- </p>--1>-->
-                            <!-- <p><h2>Bruno</h2></p>-->
-                            <!-- <p>-->
-                            <!-- <span class="image right">-->
                         </div>
                 </div>
             </section>
@@ -364,6 +351,36 @@
             <!--        </ul>-->
             <!--    </footer>--1>-->
             <!--</section>-->
+            <section id="donation" class="main">
+                <div class="spotlight">
+                    <div class="content">
+                        <header class="major">
+                            <h2>Plant a tree campaign</h2>
+                        </header>
+                            <p>
+                            Much have been said, its time to help with a little grain. This video inspired us:
+                            <div class="iframe-container">
+                            <iframe src="https://www.youtube.com/embed/-Q0xUXo2zEY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
+                            <br>
+                            and so we found out about <a href="https://www.plant-for-the-planet.org">Plant for the planet</a> and their campaign <a href="https://www.trilliontreecampaign.org">Trillion trees</a>. We love it: the goal is simple, direct and they make it achivable.<br><br>
+                            A ton of NGO support them. Think it more as a connecting platform to make donation, for this particular cause, as simple as possible.<br>
+                            We looked between the organisations to find one we could speak directly, in person. And we found <a href="https://www.bos-schweiz.ch/">Bos Schweiz</a>
+                            They really do an awesome job to solve the tree problem from the roots (Saw what i did there ;D). Let them explain:
+                            <br><br>
+                            <div class="iframe-container">
+                            <iframe src="https://www.youtube.com/embed/16NCtzxrfrI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
+                            </p>
+                        <ul class="actions">
+                            <li>
+                                We got a donation box on our registration. But you can make it directly too!<br>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- <span class="image"><img src="{% static "winteracro/images/Winter_Acro_Festival_Lenk_front.jpg"%}" alt="" /></span> -->
+                </div>
+            </section>
     </div>
     {% include 'pages/winteracro/snippets/footer.html' %}
 </div>
