--- a/acrofestival/static/winteracro/css/main.css
+++ b/acrofestival/static/winteracro/css/main.css
@@ -18,6 +18,21 @@
     vertical-align: baseline;
   }
 
+  .iframe-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+  }
+
+  .iframe-container iframe, .iframe-container object, .iframe-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
   article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
     display: block;
   }
