--- a/acrofestival/templates/pages/winteracro/snippets/navhome.html
+++ b/acrofestival/templates/pages/winteracro/snippets/navhome.html
@@ -1,6 +1,6 @@
           <nav id="nav">
             <ul>
-              <li><a href="{% url 'winteracro' %}#intro" class="">Included</a></li>
+              <li><a href="{% url 'winteracro' %}#included" class="">Included</a></li>
               <li><a href="{% url 'winteracro' %}#info" class="">General Info</a></li>
               <li><a href="{% url 'winterprices' %}">Pricing</a></li>
               <li><a href="{% url 'winteracro' %}#teachers">Teachers</a></li>
