--- a/acrofestival/templates/pages/formulario/homeform.html
+++ b/acrofestival/templates/pages/formulario/homeform.html
@@ -51,7 +51,7 @@
                             <label for="q54" class="radio-3day">
                                 {% tinycontent_simple 'winter_prices_full_nosleep' %}
                             </label>
-                            <input id="q54" name="option" type="radio" value="Full - No Sleep"/>
+                            <input id="q54" name="option" type="radio" value="F-NSL"/>
                         </span>
                         <span>
                             <label for="q54" class="radio-1day">
@@ -63,13 +63,13 @@
                             <label for="q54" class="radio-4day">
                                 {% tinycontent_simple 'winter_prices_upgrade1' %}
                             </label>
-                            <input id="q54" name="option" type="radio" value="Upgrade 1"/>
+                            <input id="q54" name="option" type="radio" value="UP1"/>
                         </span>
                         <span>
                             <label for="q54" class="radio-4day">
                                 {% tinycontent_simple 'winter_prices_upgrade2' %}
                             </label>
-                            <input id="q54" name="option" type="radio" value="Upgrade 2"/>
+                            <input id="q54" name="option" type="radio" value="UP2"/>
                         </span>
                     </div>
                 </li>
