--- a/acrofestival/templates/pages/formulario/homeform.html
+++ b/acrofestival/templates/pages/formulario/homeform.html
@@ -14,7 +14,7 @@
             <ol class="fs-fields">
                 <li>
                     <label class="fs-field-label fs-anim-upper" for="name">
-                    What's your full name?
+                        What's your full name?
                     </label>
                     <input class="fs-anim-lower" id="name" name="name" type="text" placeholder="Napoleon Dynamite" required/>
                 </li>
@@ -42,34 +42,34 @@
                     </label>
                     <div class="fs-radio-group fs-radio-custom clearfix fs-anim-lower">
                         <span>
-                            <label for="q54" class="radio-3day">
+                            <label for="full" class="radio-3day">
                                 {% tinycontent_simple 'winter_prices_full' %}
                             </label>
-                            <input id="q54" name="option" type="radio" value="Full"/>
+                            <input id="full" name="option" type="radio" value="Full"/>
                         </span>
                         <span>
-                            <label for="q54" class="radio-3day">
+                            <label for="f-nsl" class="radio-3day">
                                 {% tinycontent_simple 'winter_prices_full_nosleep' %}
                             </label>
-                            <input id="q54" name="option" type="radio" value="F-NSL"/>
+                            <input id="f-nsl" name="option" type="radio" value="F-NSL"/>
                         </span>
                         <span>
-                            <label for="q54" class="radio-1day">
+                            <label for="sin" class="radio-1day">
                                 {% tinycontent_simple 'winter_prices_single' %}
                             </label>
-                            <input id="q54" name="option" type="radio" data-info="Please add in comment which day(s). Thanks!" value="Single"/>
+                            <input id="sin" name="option" type="radio" data-info="Please add in comment which day(s). Thanks!" value="SIN"/>
                         </span>
                         <span>
-                            <label for="q54" class="radio-4day">
+                            <label for="up1" class="radio-4day">
                                 {% tinycontent_simple 'winter_prices_upgrade1' %}
                             </label>
-                            <input id="q54" name="option" type="radio" value="UP1"/>
+                            <input id="up1" name="option" type="radio" value="UP1"/>
                         </span>
                         <span>
-                            <label for="q54" class="radio-4day">
+                            <label for="up2" class="radio-4day">
                                 {% tinycontent_simple 'winter_prices_upgrade2' %}
                             </label>
-                            <input id="q54" name="option" type="radio" value="UP2"/>
+                            <input id="up2" name="option" type="radio" value="UP2"/>
                         </span>
                     </div>
                 </li>
