--- a/acrofestival/templates/pages/winteracro/basefest.html
+++ b/acrofestival/templates/pages/winteracro/basefest.html
@@ -9,6 +9,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta property="og:url" content="https://acrofestival.ch/winteracro/" />
         <meta property="og:title" content="Winter Acro Festival" />
+        <meta property="og:image" content="{% static 'urbanacro/images/logo_acrofestival.png'%}">
+    <meta property="og:image" content="{% static 'winteracro/images/BANNER.JPG'%}">
 		    {% include 'pages/winteracro/snippets/cssfest.html' %}
             {% analytical_head_bottom %}
 	</head>
